Checkpoint Before Big Schedule Refactoring

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@
 /client/build
 /server/dist
 /server/static/media
+/server/google-credentials.json
+/test-content
 
 # local env selectedFiles
 /client/.environment
