--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 # production
 /client/build
 /server/dist
-/server/static/media
+/server/static
 /server/google-credentials.json
 /test-content
 
@@ -19,3 +19,4 @@
 /client/.environment
 /server/.environment
 .env*.local
+
